<resources>
    <string name="app_name">房租满</string>
    <string name="font_sans_serif_condensed">sec-roboto-condensed</string>
    <string name="news_and_tips">信息提醒</string>
    <string name="notice">通知</string>
    <string name="setting">设置</string>
    <string name="account_manage">账号管理</string>
    <string name="homepage">主页</string>
    <string name="room_setting">房间信息设置</string>
    <string name="phone_num">手机</string>
    <string name="password">密码</string>
    <string name="password_forget">忘记密码？</string>
    <string name="password_new">新密码</string>
    <string name="password_change">修改密码</string>
    <string name="verify_code">验证码</string>
    <string name="verify_code_get">获取验证码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="next_step">下一步</string>
    <string name="register_new">新用户注册</string>
    <string name="customer_msg">用户信息</string>
    <string name="customer_name">姓名</string>
    <string name="customer_sex">性别</string>
    <string name="customer_place">户籍</string>
    <string name="customer_job">职业</string>
    <string name="customer_liveNum">居住人数</string>
    <string name="customer_Id">身份证</string>
    <string name="customer_deposit">押金</string>
    <string name="customer_tenancy">租期</string>
    <string name="customer_monthly">租金</string>
    <string name="customer_liveDay">入住日期</string>
    <string name="customer_manageBill">管理费</string>
    <string name="customer_otherBill">其他费用</string>
    <string name="customer_water">水费</string>
    <string name="customer_waterUse">本月用水量</string>
    <string name="customer_ele">电费</string>
    <string name="customer_eleUse">本月用电量</string>
    <string name="customer_air">气费</string>
    <string name="customer_airUse">本月用气量</string>
    <string name="date_pick">请选择需要查询的月份</string>
    <string name="bill_setting">本月费用设置</string>
    <string name="bill_sum">总房租</string>
    <string name="room_num">房号</string>
    <string name="go_setting_ornot">是否前往设置？</string>
    <string name="go_forward">前往</string>
    <string name="msg_without_setting">当前房间尚未设置该项信息</string>
    <string name="fail_msg">获取网络信息错误，请重试</string>
    <string name="success_msg">获取用户信息成功</string>
    <string name="confirm_dialog">确认框</string>
    <string name="confirm_dialog_txt">是否确认上述信息无误？\n(发送多条信息需耗时大约1-2分钟，发送过程中请勿关闭程序，以免造成不必要的损失)</string>
    <string name="confirm_cancel">再检查一下</string>
    <string name="confirm_ok">确认无误</string>
    <string name="msg_sending">消息发送中...</string>
    <string name="msg_finish">消息发送完毕</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="room_setting_cancel">是否取消提交</string>
    <string name="room_setting_cancel_txt">取消提交将不会保存已输入数据</string>
    <string name="room_detail_title">详细信息</string>
</resources>
