<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
            android:text="@string/msg_without_setting"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <TextView
            android:text="@string/go_setting_ornot"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <Button
                android:text="@string/go_forward"
                android:id="@+id/room_setting"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>