<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="forgetViewModel"
            type="com.example.samsung.rentalhousemanager.disclaimer.NewDisclaimerViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome">

        <LinearLayout
            android:id="@+id/welcome_forget_loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/welcome_forget_icon"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@+id/welcome_forget_icon"
                    android:gravity="bottom"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/welcome_forget_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_num"
                android:inputType="number"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="14dp"
                app:loginMessage="@{forgetViewModel.callback}" />


            <EditText
                android:id="@+id/welcome_forget_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_vertical"
                android:hint="@string/password_new"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="14dp"
                app:loginMessage="@{forgetViewModel.callback}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/welcome_forget_verify"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/verify_code"
                    android:inputType="number"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="14dp"
                    app:loginMessage="@{forgetViewModel.callback}" />

                <Button
                    android:id="@+id/welcome_forget_getCode"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/verify_code_get"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    app:AccountLoginClick="@{forgetViewModel.clickCallBack}" />
            </LinearLayout>

            <Button
                android:id="@+id/welcome_forget_click"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_click"
                android:text="@string/password_change"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:AccountLoginClick="@{forgetViewModel.clickCallBack}" />
        </LinearLayout>

    </RelativeLayout>
</layout>